# CMake

./: CMakeLists.txt  LibraryConfig.cmake.in  build.sh  build_lib.sh  build_uninstall.sh  clean.sh
include/: Book.h  Library.h  MathFunctions.h  User.h
lib/MathFunctions/: MathFunctions.cpp
src/: main.cpp
tests/: TestLibrary.cpp
